--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -22,7 +22,7 @@
             font-family: 'Roboto Condensed', sans-serif;
         }
 
-        .container1{
+        .containers1{
             display: grid;
             grid-template-columns: 50% 50%;
         }
