--- a/Raul/static/Raul/style.css
+++ b/Raul/static/Raul/style.css
@@ -1,40 +1,137 @@
 body{
-	color: #434444;
-}
-.container{
-	padding-top: 50px;
-}
-hr{
-	width: 300px;
-	border: 3px solid #434444;
+	color: #cfbb63;
+	background-color: #333333;
+	font-family: 'Roboto', sans-serif;
+	scroll-behavior: smooth;
+	width:100%;
+	margin:0px;
+	padding:0px;
 }
 
-/* Product Grid */
+
+
+.productBanner{
+	background:rgba(0, 0, 0, 0.5);
+	background-position: left;
+	width:85%;
+	height:560px;
+	margin:150px auto 50px auto;
+}
+
+.productBanner-heading{
+	font-size:150px;
+	font-family:'Roboto Condensed',sans-sarif;
+	text-transform: uppercase;
+	padding:180px 100px 120px 100px;
+	
+}
+
+.arrowDown{
+	margin-left:auto;
+	margin-right:auto;
+	text-align: center;
+}
+
+.arrowDown a img{
+	align-self: center;
+	justify-self: center;
+	background-color: rgba(0, 0, 0, 0.5);
+	border-radius: 50px;
+	transition: 0.4s ease-in-out;
+	transform: rotate(180deg);
+}
+
+.arrowDown a img:hover{
+	width:3.5%;
+	cursor: pointer;
+}
+
+
+*, ::after, ::before {
+    box-sizing: border-box;
+}
+
+.productContainer{
+	max-width: 1300px;
+	margin-left:auto;
+	margin-right:auto;
+
+}
+
+.row{
+	display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
+.productCard{
+	position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 15px;
+	padding-left: 15px;
+}
+
+.productImage{
+	width:100%;
+	padding:20px;
+	transition: 0.4s ease-in-out;
+}
+
+.actions:hover{
+	background-color: black;
+	cursor: pointer;
+}
+
+.actions:hover p{
+	color:#cfbb63;
+	cursor: pointer;
+}
+
+.addToCart{
+	padding:10px;
+	margin:10px;
+}
+
 .product-grid{
 	padding-bottom: 20px;
 	padding-top: 20px;
 }
+
 .product-grid:hover{
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
 .image{
 	position: relative;
 }
+
 .overlay{
 	position: absolute;
-	top: 0;
-	bottom: 0;
+	top: 300px;
+	bottom:0;
 	left: 0;
 	right: 0;
-	height: 100%;
+	height: 20%;
 	width: 100%;
+	padding:20px;
+	background-color: transparent;
 	opacity: 0;
-	transition: .5s ease;
-	background-color: rgba(67, 68, 68, 0.7);
+	transition: .5s ease-in-out;
 }
+
 .image:hover .overlay{
 	opacity: 1;
 }
+
+.image:hover .productImage{
+	filter: blur(1px) grayscale(100%) brightness(60%);
+}
+
 .detail{
 	color: #fff;
 	font-size: 20px;
@@ -43,6 +140,48 @@ hr{
 	left: 50%;
 	transform: translate(-50%, -50%);
 	-ms-transform: translate(-50%, -50%);
+}
+
+h5{
+	text-align: center;
+	font-weight: normal;
+}
+
+.actions{
+	display: block;
+	margin-left:auto;
+	margin-right: auto;
+	width:120px;
+	height:40px;
+	background-color: rgba(0, 0, 0, 0.7);
+	color:white;
+	border-radius:20px;
+	text-align: center;
+	position: relative;
+	top:80%;
+	transition: 0.4s ease-in-out;
+}
+
+.actions p{
+	padding:10px 0px 0px 0px;
+	transition: 0.4s ease-in-out;
+}
+
+.productTitle{
+	font-size:20px;
+	margin-block-start: 5px;
+	margin-block-end: 0px;
+	margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+.productPrice{
+	margin:0px;
+	padding:0px;
+	margin-block-start: 5px;
+	margin-block-end: 20px;
+	margin-inline-start: 0px;
+    margin-inline-end: 0px;
 }
 
 .buy{
@@ -56,4 +195,13 @@ hr{
 .buy:hover{
 	background-color: #434444;
 	color: green;
+}
+
+@media (min-width: 768px){
+	.productCard {
+		-webkit-box-flex: 0;
+		-ms-flex: 0 0 33.3333%;
+		flex: 0 0 33.33333%;
+		max-width: 33.3333%;
+	}
 }
