--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="57x57" href="{% static 'Raul/Favicons/apple-icon-57x57.png' %}">
@@ -106,7 +107,7 @@
         
         <p id="categoryP" style="color:white;">Sale</p>
         
-        <p id="categoryPstyle="color:white;"">Venue Bookings</p>
+        <p id="categoryP" style="color:white;">Venue Bookings</p>
 
     </div>
 
@@ -161,8 +162,8 @@
 </div>
 
 
-<div class="container">
-    <div class = "container1">
+<div class="containers">
+    <div class = "containers1">
         {% block content %}{% endblock %}
     </div>
 </div>
@@ -176,6 +177,6 @@
 <script>
     AOS.init();
 </script>
-<script src="{% static 'Raul/JS/script.js' %}" charset="UTF-8"></script>
+<script src="{% static 'Raul/JS/navbar.js' %}" charset="UTF-8"></script>
 </body>
 </html>
