--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -160,7 +160,7 @@
     </div>
 
     <div class ="bannerHead" id = "mainBanner">
-        <video src="{% static 'Raul/Images/Test2.mp4' %}" autoplay loop muted id = "videoBG"></video>
+        <video src="{% static 'Raul/Images/new_video.mp4' %}" autoplay loop muted id = "videoBG"></video>
         <div class = "bannerHeading">
             <figcaption><a href="#shop"><button> explore the shop </button></a></figcaption>
         </div>
