--- a/Raul/templates/Raul/landing.html
+++ b/Raul/templates/Raul/landing.html
@@ -16,45 +16,45 @@
 </head>
 <body>
 
-    
-    
-    
-    <div class="bigContainer">
-
-        
-        
-        <a href="#">
-            <div class="container" id="cafeBanner">
-                <p id= "cafe"><img src="{% static 'Raul/Images/cafe.png' %}" alt="logo"></p>
-                <img src="{% static 'Raul/Images/coffee.jpg' %}" id="bgPic">
-                <div class="backgroundText">
-                    <figcaption>
-                        CAFE FLOR
-                    </figcaption>
+    <div class="placeContainers">
+        <div class="bigContainer">
+            <a href="#">
+                <div class="container" id="cafeBanner">
+                    <p id ="raul"><img src="{% static 'Raul/Images/raullogo.png' %}" alt="logo"></p>
+                    <img src="{% static 'Raul/Images/3.jpg' %}" id="bgPic">
+                    <div class = "backgroundText">
+                        <figcaption>
+                            RAUL INC.
+                        </figcaption>
+                    </div>
                 </div>
-            </div>
-        </a>
-
-        <a href="{% url 'Raul-SecondHome' %}">
-            <div class="container" id="raulBanner">
-                <p id ="raul"><img src="{% static 'Raul/Images/raullogo.png' %}" alt="logo"></p>
-                <img src="{% static 'Raul/Images/flowers.jpg' %}" id="bgPic">
-                <div class="backgroundText2">
-                    <figcaption>
-                        RAUL
-                    </figcaption>
+            </a>
+        </div>
+        <div class ="bigContainer2">
+            <a href="{% url 'Raul-SecondHome' %}">
+                <div class="container" id="raulBanner">
+                    <p id ="raul"><img src="{% static 'Raul/Images/raullogo.png' %}" alt="logo"></p>
+                    <img src="{% static 'Raul/Images/flowers.jpg' %}" id="bgPic">
+                    <div class="backgroundText2">
+                        <figcaption>
+                            RAUL
+                        </figcaption>
+                    </div>
                 </div>
-            </div>
-        </a>
-
-        
-        <a href="#">
-            <div class="container">
-                <img src="{% static 'Raul/Images/5.jpg' %}" id="bgPic">
-            </div>
-        </a>
-
-        
+            </a>
+            <a href="#">
+                <div class="container" id="cafeBanner">
+                    <p id= "cafe"><img src="{% static 'Raul/Images/cafe.png' %}" alt="logo"></p>
+                    <img src="{% static 'Raul/Images/coffee.jpg' %}" id="bgPic">
+                    <div class="backgroundText">
+                        <figcaption>
+                            CAFE FLOR
+                        </figcaption>
+                    </div>
+                </div>
+            </a>
+           
+        </div>
     </div>
 
 
