--- a/Raul/templates/Raul/single_product.html
+++ b/Raul/templates/Raul/single_product.html
@@ -4,77 +4,90 @@
 
 <head xmlns="http://www.w3.org/1999/html">
     <style>
-        html, body {
-            height: 100%;
+        body {
             width: 100%;
             margin: 0;
             font-family: 'Roboto', sans-serif;
+            color:#cfbb63;
         }
 
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 15px;
-            display: flex;
+        a{color:#cfbb63;}
+
+        .containers1{
+            margin:150px auto 100px auto;
+        }
+
+        .container2 {
+            margin: 0;
+            padding:5px;
+            display: grid;
+            grid-template-columns: 50% 50%;
         }
 
         .left-column {
-            width: 65%;
             position: relative;
+            justify-content: right;
+            text-align: right;
+        }
+
+        .left-column img{
+            width:80%;
+            margin-left:auto;
+            margin-right: auto;
         }
 
         .right-column {
-            width: 35%;
             margin-top: 60px;
+            padding:50px;
         }
-        /* !*Left Column*!*/
-        /*.left-column img {*/
-        /*    width: 100%;*/
-        /*    !*position: relative;*!*/
-        /*    !*left: 100%;*!*/
-        /*    !*top: 100%;*!*/
-        /*    !*opacity: 0;*!*/
-        /*    !*transition: all 0.3s ease;*!*/
-        /*}*/
 
-        /*.left-column img.active {*/
-        /*    opacity: 1;*/
-        /*}*/
-         /*Product Description */
-        .product-description {
-            border-bottom: 1px solid #E1E8EE;
-            margin-bottom: 20px;
-        }
         .product-description span {
             font-size: 12px;
-            color: #358ED7;
             letter-spacing: 1px;
             text-transform: uppercase;
             text-decoration: none;
         }
+
         .product-description h1 {
             font-weight: 300;
             font-size: 52px;
-            color: #43484D;
-            letter-spacing: -2px;
+            letter-spacing: 5px;
+            margin-block-start: 15px;
+            margin-block-end: 10px;
         }
         .product-description p {
             font-size: 16px;
             font-weight: 300;
-            color: #86939E;
             line-height: 24px;
         }
-        /* Product Price */
-        .product-price {
-            display: flex;
-            align-items: center;
+
+        .product-configuration form{
+            display: grid;
+            grid-template-columns: 250px 250px;
+            grid-template-rows: 60px 60px;
         }
 
-        .product-price span {
-            font-size: 26px;
-            font-weight: 300;
-            color: #43474D;
-            margin-right: 20px;
+        .numberOfItems{
+            padding:10px 10px 20px 10px;
+            font-size:25px;
+            margin:10px 0px 10px 0px;
+            width:150px;
+            background: transparent;
+            outline: none;
+            border:none;
+            border-bottom: 1px solid #cfbb63;
+            color: #cfbb63;
+            font-family: 'Roboto',sans-serif;
+            text-align: center;
+        }
+
+        .form-control{
+            background:transparent;
+            border: 1px solid #cfbb63;
+            padding:10px;
+            color:#cfbb63;
+            margin:10px 0px;
+            width:200px;
         }
 
         .cart-btn {
@@ -91,78 +104,88 @@
             background-color: #64af3d;
         }
 
+        form input[type = submit]{
+            background: transparent;
+            border-radius: 50px;
+            font-family: 'Roboto',sans-serif;
+            font-size: 20px;
+            border:2px solid #cfbb63;
+            color:#cfbb63;
+            outline: none;
+            padding:0px;
+            transition: 0.4s ease-in-out;
+            margin:0px 50px;
+        }
+
+        form input[type = submit]:hover{
+            background-color:#cfbb63;
+            color:black;
+            cursor: pointer;
+        }
+
+        form{
+            margin-left:auto;
+            margin-right: auto;
+            text-align: center;
+            justify-content: center;
+        }
+        .product-price{
+            text-align: left;
+            padding:10px 0px;
+            font-size: 20px;
+        }
+        .product-description hr{
+            width:80%;
+            border-top: 1px solid #cfbb63;
+            background-color: #cfbb63;
+            outline: none;
+            border-style: solid;
+            margin-bottom: 50px;
+
+        }
+
 
     </style>
 </head>
 
-<main class="container">
+<div class="container2">
 
     <!-- Left Column / Headphones Image -->
     <div class="left-column">
-        <img src="{{ single_product.image.url }}" width="500px" height="600px">
+        <img src="{{ single_product.image.url }}">
         <img data-image="blue" src="images/blue.png" alt="">
         <img data-image="red" class="active" src="images/red.png" alt="">
-
     </div>
 
 
     <!-- Right Column -->
     <div class="right-column">
-
         <!-- Product Description -->
         <div class="product-description">
             <a href="{% url 'cat-view' 'Plates' %}" >Plates</a>
             <h1>{{single_product.title}}</h1>
+            <div class="product-price">
+                ${{single_product.price}}
+            </div>
             <p>{{single_product.description}}</p>
+            <hr>
         </div>
+        
 
         <!-- Product Configuration -->
         <div class="product-configuration">
 
-            <!-- Product Color -->
-<!--            <div class="product-color">-->
-<!--                <span>Color</span>-->
-
-<!--                <div class="color-choose">-->
-<!--                    <div>-->
-<!--                        <input data-image="red" type="radio" id="red" name="color" value="red" checked>-->
-<!--                        <label for="red"><span></span></label>-->
-<!--                    </div>-->
-<!--                    <div>-->
-<!--                        <input data-image="blue" type="radio" id="blue" name="color" value="blue">-->
-<!--                        <label for="blue"><span></span></label>-->
-<!--                    </div>-->
-<!--                    <div>-->
-<!--                        <input data-image="black" type="radio" id="black" name="color" value="black">-->
-<!--                        <label for="black"><span></span></label>-->
-<!--                    </div>-->
-<!--                </div>-->
-
-<!--            </div>-->
-
-            <!-- Cable Configuration -->
-<!--            <div class="cable-config">-->
-<!--                <span>Cable configuration</span>-->
-
-<!--                <div class="cable-choose">-->
-<!--                    <button>Straight</button>-->
-<!--                    <button>Coiled</button>-->
-<!--                    <button>Long-coiled</button>-->
-<!--                </div>-->
-
-<!--                <a href="#">How to configurate your headphones</a>-->
-<!--            </div>-->
-            <form class= 'form pull-right' method='POST' action="{% url 'add_to_cart' single_product.slug %}">
+          
+            <form  method='POST' action="{% url 'add_to_cart' single_product.slug %}">
             {% csrf_token %}
 
-                <input name='qty' type='number' placeholder='1' value='1' />
-
+                <input name='qty' type='number' placeholder='Quantity' class = "numberOfItems" min="1" max="50">
 
                 {% if single_product.variation_set.colors %}
 
                 <select class="form-control" name="color">
                     {% for item in single_product.variation_set.colors %}
-                    <option value="{{item.title }}">{{item.title }}
+                    <option value="{{item.title}}">{{item.title }}
                     </option>
                 {% endfor %}
                     </select>
@@ -183,12 +206,11 @@
         </div>
 
         <!-- Product Pricing -->
-        <div class="product-price">
-            <span>${{item.price}}</span>
-
-        </div>
+        
     </div>
-</main>
+    <button onclick="topFunction()" id="scrollTop" style="bottom:-100px">  </button>
+</div>
+
 
 
 {% endblock %}
