Revert "Merge branch 'master' of https://github.com/aifares/django_prject"
This reverts commit 4e7cf8ea3588aac2018ce071da323ea52437ac64, reversing
changes made to a9b3e2732a3030975c97bd99fac1dfa9fc43f339.

--- a/Raul/templates/Raul/categories.html
+++ b/Raul/templates/Raul/categories.html
@@ -13,7 +13,7 @@
 <body>
 
 <div class="container">
-    <h1 class="text-center">Raul</h1>
+    <h1 class="text-center">RAUL</h1>
     <hr>
 
     <div class="row">
@@ -43,7 +43,7 @@
         <!-- ./Product -->
 
     </div>
-    <img src="{{ banner.image.url }}" class="w-100">
+
 </div>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
