--- a/Raul/templates/Raul/landing.html
+++ b/Raul/templates/Raul/landing.html
@@ -24,7 +24,7 @@
                     <img src="{% static 'Raul/Images/3.jpg' %}" id="bgPic">
                     <div class = "backgroundText">
                         <figcaption>
-                            RAUL INC.
+                            RAUL AVILA
                         </figcaption>
                     </div>
                 </div>
