--- a/Raul/static/Raul/CSS/main.css
+++ b/Raul/static/Raul/CSS/main.css
@@ -2026,6 +2026,143 @@ nav ul li a:hover{
         font-size:2em;
     }
 
+    input[type=text], input[type=password] {
+        width: 80%;
+        padding: 12px 20px;
+        margin:15px 30px;
+        display: inline-block;
+        outline:none;
+        border: 1px solid #ccc;
+        box-sizing: border-box;
+        border-radius: 40px;
+      }
+
+      
+      .modal button {
+        background-color: #cfbb63;
+        color: #333333;
+        padding: 14px 20px;
+        margin: 8px auto;
+        border: none;
+        cursor: pointer;
+        width: 50%;
+        font-size: 20px;
+        text-align: center;
+        font-weight: bold;
+        transition: 0.4s ease-in-out;
+      }
+      
+      .modal button:hover {
+        box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.5);
+        margin:12px auto;
+      }
+
+      .cancelbtn {
+        width: auto;
+        padding: 10px 18px;
+        background-color: #f44336;
+      }
+      
+      .imgcontainer {
+        text-align: center;
+        margin: 24px 0 5px 0;
+        position: relative;
+      }
+
+      .imgcontainer p{
+          font-size: 40px;          
+          letter-spacing: 4px;
+          margin-block-end: 10px;
+      }
+      
+      .modal-content .container {
+        padding: 16px 80px;
+      }
+
+      .centerIt{
+          margin-left: auto;
+          margin-right: auto;
+          justify-content: center;
+          align-content: center;
+          text-align: center;
+      }
+      
+      span.psw a{
+        color:#cfbb63;
+      }
+
+      span.psw{
+        margin-top: 50px;
+      }
+
+      .centerIt #accountCreate{
+          padding-left:30px;
+      }
+      
+      .modal {
+        display: none; 
+        position: fixed;
+        z-index: 200; 
+        left: 0;
+        top: 0;
+        width: 100%; 
+        height: 100%; 
+        background-color: rgb(0,0,0); 
+        background-color: rgba(0,0,0,0.5);
+        padding-top: 15vh;
+      }
+
+      .modal::-webkit-scrollbar{
+          display: none;
+      }
+      
+      .modal-content {
+        background-color: #333333;
+        margin: 5% auto 15% auto; 
+        border: 1px solid rgba(0,0,0,0.5);
+        color:#cfbb63;
+        width: 500px; 
+        height:460px;
+        font-family: 'Roboto',sans-serif;
+        border-radius: 50px;
+      }
+
+      .modal-content .container label{
+          letter-spacing: 4px;
+          font-size: 18px;
+          font-weight: 200;
+      }
+      
+      .close {
+        position: absolute;
+        right: 50px;
+        top: 10px;
+        color: #cfbb63;
+        font-size: 35px;
+        font-weight: bold;
+      }
+      
+      .close:hover,
+      .close:focus {
+        color: orange;
+        cursor: pointer;
+      }
+    
+      .animate {
+        -webkit-animation: animatezoom 0.6s;
+        animation: animatezoom 0.6s
+      }
+      
+      @-webkit-keyframes animatezoom {
+        from {-webkit-transform: scale(0)} 
+        to {-webkit-transform: scale(1)}
+      }
+        
+      @keyframes animatezoom {
+        from {transform: scale(0)} 
+        to {transform: scale(1)}
+      }
+
     footer{
         height: 200px;
         width:100%;
@@ -2070,6 +2207,7 @@ nav ul li a:hover{
     .footerEssentials .socialSection{
         padding:50px 0px;
     }
+
 
 }
 
